--- a/html/index.html
+++ b/html/index.html
@@ -8,11 +8,15 @@
 </head>
 <body style="background-color: burlywood;">
     <h1>
-        Hello world!
+        Hello There!
     </h1>
+
+    <p>
+        I'm just a lowly index page. Feel free to use click on the links below to get to the sites you want to see!
+    </p>
     <h2>
-    <a href="resume.html">Click to go to resume</a> <br>
-    <a href="scratch.html">Click to go to scratch</a>
+    <a href="resume.html" class="button">Click to go to resume</a> <br> <br>
+    <a href="scratch.html" class="button">Click to go to scratch</a>
     </h2>
 </body>
 </html>
