--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
     </h1>
 
     <p>
-        I'm just a lowly index page. Feel free to use click on the links below to get to the sites you want to see!
+        I'm just a lowly index page. Feel free to use click on the links below to get to the sites you want to see! :)
     </p>
     <h2>
     <a href="resume.html" class="button">Click to go to resume</a> <br> <br>
