--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="styles/index.css">
 </head>
-<body>
+<body style="background-color: burlywood;">
     <h1>
-        Hello world!
+        Hello There!
     </h1>
-    <a href="resume.html">Click to go to resume</a>
+
+    <p>
+        I'm just a lowly index page. Feel free to use click on the links below to get to the sites you want to see! :)
+    </p>
+    <h2>
+    <a href="resume.html" class="button">Click to go to resume</a> <br> <br>
+    <a href="scratch.html" class="button">Click to go to scratch</a>
+    </h2>
 </body>
 </html>
