--- a/index.html
+++ b/index.html
@@ -1,22 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="stylesheet" href="styles/index.css">
+    <link rel="stylesheet" href="../styles/index.css">
 </head>
+
 <body style="background-color: burlywood;">
     <h1>
         Hello There!
     </h1>
 
     <p>
-        I'm just a lowly index page. Feel free to use click on the links below to get to the sites you want to see! 
+        I'm just a lowly index page. Feel free to use click on the links below to get to the sites you want to see!
     </p>
     <h2>
-    <a href="resume.html" class="button">Click to go to resume</a> <br> <br>
-    <a href="scratch.html" class="button">Click to go to scratch</a>
+        <a href="resume.html" class="button">Click to go to resume</a> <br> <br>
+        <a href="scratch.html" class="button">Click to go to scratch</a>
     </h2>
+    <p>
+        If you get bored of those, you can check out this video!
+    </p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Vg0s8Ard2oM?si=x81hVlzjsZfwWfRO"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
 </body>
+
 </html>
