--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         I'm just a lowly index page. Feel free to use click on the links below to get to the sites you want to see!
     </p>
     <h2>
-        <a href="resume.html" class="button">Click to go to resume</a> <br> <br>
-        <a href="scratch.html" class="button">Click to go to scratch</a>
+        <a href="html/resume.html" class="button">Click to go to resume</a> <br> <br>
+        <a href="html/scratch.html" class="button">Click to go to scratch</a>
     </h2>
     <p>
         If you get bored of those, you can check out this video!
