--- a/html/scratch.html
+++ b/html/scratch.html
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <p class="center">
-            <a href="index.html" class="button">Index</a>
+            <a href="../index.html" class="button">Index</a>
             <a href="resume.html" class="button">Professional</a>
         </p>
     </div>
@@ -22,13 +22,19 @@
             Quick Navigation Menu
         </h3>
         <ol>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#X-Wings">X-Wings</a></li>
-            <li><a href="#Y-Wings">Y-Wings</a></li>
-            <li><a href="#Blasters">Blasters</a></li>
-            <li><a href="#tdetonators">Thermal Detonators</a></li>
-            <li><a href="#purchase">Purchasing Guide</a></li>
-            <li><a href=#data>Free Data</a></li>
+            <li><a href="#Home" style="color:white">Home</a></li>
+            <li><a href="#ships" style="color:white">Ships</a></li>
+            <ul>
+                <li><a href="#X-Wings" style="color:white">X-Wings</a></li>
+                <li><a href="#Y-Wings" style="color:white">Y-Wings</a></li>
+            </ul>
+            <li><a href="#weapons" style="color:white">Weapons</a></li>
+            <ul>
+                <li><a href="#Blasters" style="color:white">Blasters</a></li>
+                <li><a href="#tdetonators" style="color:white">Thermal Detonators</a></li>
+            </ul>
+            <li><a href="#purchase" style="color:white">Purchasing Guide</a></li>
+            <li><a href=#data style="color:white">Free Data</a></li>
         </ol>
     </div>
 
@@ -38,20 +44,20 @@
         </h1>
 
         <span class="margin">
-            As the galaxy's premier arms dealer for the Rebel Alliance, I am the linchpin in our collective endeavor to
-            overthrow the Empire's oppressive regime. My life's work is dedicated to arming our brave fighters with the
-            most advanced and effective weaponry available. I specialize in sourcing and supplying the legendary
-            X-Wings, the backbone of our fleet, known for their agility and firepower. In the shadows of space, I
-            negotiate and secure deals that bring hope to our cause. My network spans across star systems, ensuring that
-            no matter where the fight takes us, we are prepared. I am not just a supplier; I am a believer in the cause,
-            a strategist ensuring that every rebel pilot has the best chance of victory. My discretion is absolute, my
-            commitment unwavering. When you choose to equip your forces through me, you're not just buying arms; you're
+            As the galaxy's premier arms dealer for the Rebel Alliance, Galactic Guerrilla Gear™ is the linchpin in our collective endeavor to
+            overthrow the Empire's oppressive regime. Our work is dedicated to arming our brave fighters with the
+            most advanced and effective weaponry available. We specialize in sourcing and supplying the legendary
+            X-Wings, the backbone of our fleet, known for their agility and firepower. In the shadows of space, we
+            negotiate and secure deals that bring hope to our cause. Our network spans across star systems, ensuring that
+            no matter where the fight takes us, we are prepared. We are not just a supplier; We are believers in the cause,
+            strategists ensuring that every rebel pilot has the best chance of victory. Our discretion is absolute, our
+            commitment unwavering. When you choose to equip your forces through Galactic Guerrilla Gear™, you're not just buying arms; you're
             investing in the future of freedom across the galaxy. Let's join forces to bring light to the darkened
-            corners of the universe. Together, we will prevail. Continue reading to find out what we offer!
+            corners of the galaxy. Together, we will prevail. Continue reading to find out what we offer!
         </span>
 
-
-        <h2 class="center" id="X-Wings" style="clear:both">
+        <h1 class="center" style="clear:both;" id="ships">Ships</h1>
+        <h2 class="margin" id="X-Wings" style="clear:both">
             X-Wings
         </h2>
         <p class="wrap">
@@ -73,14 +79,14 @@
             </span>
         </p>
 
-        <span class="center">
+        <span class="center" style="clear:both; padding-top:25px">
             <iframe width="560" height="315" src="https://www.youtube.com/embed/tbHsVXP2h_Y?si=SJJcNkikEgmejy63"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </span>
 
-        <h2 class="center" id="Y-Wings" style="clear:both">
+        <h2 class="margin" id="Y-Wings" style="clear:both">
             Y-Wings
         </h2>
 
@@ -95,8 +101,9 @@
                 in any battle.
             </span>
         </p>
-
-        <h2 class="center" id="Blasters" style="clear:both">
+        <br>
+        <h1 id="weapons" style="clear:both; padding-top:25px" class="center">Weapons</h1>
+        <h2 class="margin" id="Blasters">
             Blasters
         </h2>
         <p class="wrap">
@@ -114,13 +121,13 @@
 
 
 
-        <h2 class="center" id="tdetonators" style="clear:both">
+        <h2 class="margin" id="tdetonators" style="clear:both">
             Thermal Detonators
         </h2>
 
         <p class="wrap">
             <span class="margin">
-                <img src="../images/ThermalDetonator-SW100Objects.webp" width=40% class="pict_right">
+                <img src="../images/ThermalDetonator-SW100Objects.webp" width=25% class="pict_right">
                 Unleash the power of controlled chaos with our thermal detonators, the ultimate equalizer in the Rebel
                 Alliance’s arsenal. Compact and easy to carry, these devices pack a devastating punch, capable of
                 clearing rooms or dismantling vehicles with a well-placed throw. Ideal for disrupting enemy formations
@@ -132,9 +139,9 @@
         </p>
 
 
-        <h2 class="center" id="purchase" style="clear:both">
+        <h1 class="center" id="purchase" style="clear:both">
             How To Make A Purchase
-        </h2>
+        </h1>
         <p class="margin">
             This is just a small sampling of what we offer here at Galactic Guerrilla Gear™. Please contact us directly
             to find out all of the other amazing items we have to offer. To make a purchase, please use one of the
@@ -169,15 +176,15 @@
             If you have any questions or issues, please do not hesitate in reaching out to us! May the force be with you
             as you work hard to acheive glactic peace and freedom!
         </p>
-        <h2 class="center" id="data">Free Data</h2>
+        <h1 class="center" id="data">Free Data</h1>
         <p class="margin">
             Bonus! As a demonstration of goodwill, here is an interactive list of all registered ships that you can
             purchase from us, or that you may face in your endeavours to bring down the empire. Galactic Guerrilla Gear™
             does not hold itself liable to any discrepencies in the data provided and does not guarantee that it sells
             all of these different ships.
         </p>
-        <div class='tableauPlaceholder' id='viz1713400754776' style='position: relative; overflow:auto'><noscript><a href='#'><img
-                        alt=' '
+        <div class='tableauPlaceholder' id='viz1713400754776' style='position: relative; overflow:auto'><noscript><a
+                    href='#'><img alt=' '
                         src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;JQ&#47;JQZ6FWMWN&#47;1_rss.png'
                         style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
                 <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
@@ -195,14 +202,18 @@
             </object></div>
         <script
             type='text/javascript'>var divElement = document.getElementById('viz1713400754776'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '1200px'; vizElement.style.height = '850px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);</script>
-        
+
 
     </div>
 
 
 
     <div class="footer">
-
+        <h3 class="center">
+            This page is powered by: <br>
+            Galactic Guerrilla Gear™ <br>
+            All rights reserved
+        </h3>
     </div>
 
 </body>
