--- a/html/resume.html
+++ b/html/resume.html
@@ -59,10 +59,11 @@
                     other problems that end-users face. 
                 </p>
                 <div class="social-icons">
-                    <a class="social-icon" href="https://www.linkedin.com/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="social-icon" href="https://www.linkedin.com/in/bryan-gurr-098592209/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                     <a class="social-icon" href="https://github.com/" target="_blank"><i class="fab fa-github" ></i></a>
-                    <a class="social-icon" href="https://facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a class="social-icon" href="https://www.facebook.com/bryan.gurr.3" target="_blank"><i class="fab fa-facebook-f"></i></a>
                     <a class="social-icon" href="https://reddit.com" target="_blank"><i class="fab fa-reddit"></i></a>
+
 
                 </div>
             </div>
