--- a/html/scratch.html
+++ b/html/scratch.html
@@ -13,7 +13,7 @@
     <div class="header">
         <p class="center">
             <a href="../index.html" class="button">Index</a>
-            <a href="resume.html" class="button">Professional</a>
+            <a href="resume.html" class="button">Resume</a>
         </p>
     </div>
 
